Improve layers.py code

--- a/assignments/2019/assignment2/TensorFlow.ipynb
+++ b/assignments/2019/assignment2/TensorFlow.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "pdf-ignore-input"
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "pdf-ignore"
@@ -1718,42 +1718,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 0, Epoch 1, Loss: 3.7893905639648438, Accuracy: 12.5, Val Loss: 5.1655120849609375, Val Accuracy: 13.899999618530273\n",
-      "Iteration 300, Epoch 1, Loss: 1.6147494316101074, Accuracy: 44.26910400390625, Val Loss: 1.4852122068405151, Val Accuracy: 51.5\n",
-      "Iteration 600, Epoch 1, Loss: 1.411393165588379, Accuracy: 51.03993225097656, Val Loss: 1.1860697269439697, Val Accuracy: 58.999996185302734\n",
-      "Iteration 900, Epoch 2, Loss: 0.986149787902832, Accuracy: 65.71759033203125, Val Loss: 1.0172349214553833, Val Accuracy: 65.20000457763672\n",
-      "Iteration 1200, Epoch 2, Loss: 0.9503538608551025, Accuracy: 67.01509094238281, Val Loss: 0.9617171287536621, Val Accuracy: 66.69999694824219\n",
-      "Iteration 1500, Epoch 2, Loss: 0.9162880182266235, Accuracy: 68.03571319580078, Val Loss: 0.9765019416809082, Val Accuracy: 66.5\n",
-      "Iteration 1800, Epoch 3, Loss: 0.7868976593017578, Accuracy: 72.54879760742188, Val Loss: 0.9269362688064575, Val Accuracy: 68.30000305175781\n",
-      "Iteration 2100, Epoch 3, Loss: 0.761600136756897, Accuracy: 73.62422943115234, Val Loss: 0.8951029777526855, Val Accuracy: 69.70000457763672\n",
-      "Iteration 2400, Epoch 4, Loss: 0.6620247960090637, Accuracy: 77.30582427978516, Val Loss: 0.8293768167495728, Val Accuracy: 72.5999984741211\n",
-      "Iteration 2700, Epoch 4, Loss: 0.6504720449447632, Accuracy: 77.67137145996094, Val Loss: 0.8250309824943542, Val Accuracy: 71.30000305175781\n",
-      "Iteration 3000, Epoch 4, Loss: 0.6301695108413696, Accuracy: 78.2427978515625, Val Loss: 0.8347265720367432, Val Accuracy: 71.69999694824219\n",
-      "Iteration 3300, Epoch 5, Loss: 0.543755829334259, Accuracy: 81.54667663574219, Val Loss: 0.8049328327178955, Val Accuracy: 75.30000305175781\n",
-      "Iteration 3600, Epoch 5, Loss: 0.5218117237091064, Accuracy: 82.137451171875, Val Loss: 0.9049948453903198, Val Accuracy: 71.9000015258789\n",
-      "Iteration 3900, Epoch 6, Loss: 0.44121867418289185, Accuracy: 85.40933227539062, Val Loss: 0.7805460691452026, Val Accuracy: 74.9000015258789\n",
-      "Iteration 4200, Epoch 6, Loss: 0.4132440686225891, Accuracy: 86.05121612548828, Val Loss: 0.9633291959762573, Val Accuracy: 73.0\n",
-      "Iteration 4500, Epoch 6, Loss: 0.38733920454978943, Accuracy: 86.89921569824219, Val Loss: 0.9316161274909973, Val Accuracy: 73.0\n",
-      "Iteration 4800, Epoch 7, Loss: 0.3236997425556183, Accuracy: 88.84146118164062, Val Loss: 1.0860967636108398, Val Accuracy: 72.79999542236328\n",
-      "Iteration 5100, Epoch 7, Loss: 0.29874518513679504, Accuracy: 89.79888916015625, Val Loss: 1.0062892436981201, Val Accuracy: 73.5\n",
-      "Iteration 5400, Epoch 8, Loss: 0.2320302277803421, Accuracy: 92.14743041992188, Val Loss: 0.9630295634269714, Val Accuracy: 73.5999984741211\n",
-      "Iteration 5700, Epoch 8, Loss: 0.22520345449447632, Accuracy: 92.27507019042969, Val Loss: 1.1122609376907349, Val Accuracy: 73.9000015258789\n",
-      "Iteration 6000, Epoch 8, Loss: 0.21324557065963745, Accuracy: 92.63497924804688, Val Loss: 1.2529312372207642, Val Accuracy: 70.9000015258789\n",
-      "Iteration 6300, Epoch 9, Loss: 0.18088588118553162, Accuracy: 93.97579193115234, Val Loss: 1.1811418533325195, Val Accuracy: 72.19999694824219\n",
-      "Iteration 6600, Epoch 9, Loss: 0.17688021063804626, Accuracy: 93.91516876220703, Val Loss: 1.2022119760513306, Val Accuracy: 73.19999694824219\n",
-      "Iteration 6900, Epoch 10, Loss: 0.146725133061409, Accuracy: 95.75892639160156, Val Loss: 1.206939697265625, Val Accuracy: 73.79999542236328\n",
-      "Iteration 7200, Epoch 10, Loss: 0.15310150384902954, Accuracy: 94.4778060913086, Val Loss: 1.2455042600631714, Val Accuracy: 74.5\n",
-      "Iteration 7500, Epoch 10, Loss: 0.14552785456180573, Accuracy: 94.73332214355469, Val Loss: 1.2146761417388916, Val Accuracy: 73.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class CustomConvNet(tf.keras.Model):\n",
     "    def __init__(self):\n",
@@ -1834,13 +1801,48 @@
     "        ############################################################################\n",
     "        \n",
     "        return x\n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0, Epoch 1, Loss: 4.086295127868652, Accuracy: 12.5, Val Loss: 4.507420539855957, Val Accuracy: 13.199999809265137\n",
+      "Iteration 300, Epoch 1, Loss: 1.6533818244934082, Accuracy: 43.55793380737305, Val Loss: 1.471709132194519, Val Accuracy: 50.19999694824219\n",
+      "Iteration 600, Epoch 1, Loss: 1.4560245275497437, Accuracy: 49.78681564331055, Val Loss: 1.2510604858398438, Val Accuracy: 57.20000457763672\n",
+      "Iteration 900, Epoch 2, Loss: 1.007521152496338, Accuracy: 64.97685241699219, Val Loss: 1.0304434299468994, Val Accuracy: 63.900001525878906\n",
+      "Iteration 1200, Epoch 2, Loss: 0.9641342163085938, Accuracy: 66.3936767578125, Val Loss: 0.9729200601577759, Val Accuracy: 65.80000305175781\n",
+      "Iteration 1500, Epoch 2, Loss: 0.926266610622406, Accuracy: 67.551025390625, Val Loss: 0.9301822781562805, Val Accuracy: 67.19999694824219\n",
+      "Iteration 1800, Epoch 3, Loss: 0.7934252619743347, Accuracy: 72.49070739746094, Val Loss: 0.8698236346244812, Val Accuracy: 70.30000305175781\n",
+      "Iteration 2100, Epoch 3, Loss: 0.763357937335968, Accuracy: 73.67091369628906, Val Loss: 0.83391273021698, Val Accuracy: 71.5\n",
+      "Iteration 2400, Epoch 4, Loss: 0.6582642793655396, Accuracy: 77.12378692626953, Val Loss: 0.7901626825332642, Val Accuracy: 73.69999694824219\n",
+      "Iteration 2700, Epoch 4, Loss: 0.6490508913993835, Accuracy: 77.60545349121094, Val Loss: 0.8368052840232849, Val Accuracy: 71.80000305175781\n",
+      "Iteration 3000, Epoch 4, Loss: 0.6276915669441223, Accuracy: 78.28724670410156, Val Loss: 0.8429279923439026, Val Accuracy: 72.79999542236328\n",
+      "Iteration 3300, Epoch 5, Loss: 0.5404477119445801, Accuracy: 81.48734283447266, Val Loss: 0.8269108533859253, Val Accuracy: 74.5\n",
+      "Iteration 3600, Epoch 5, Loss: 0.5194686055183411, Accuracy: 82.16072845458984, Val Loss: 0.9136738181114197, Val Accuracy: 71.0\n",
+      "Iteration 3900, Epoch 6, Loss: 0.42960742115974426, Accuracy: 86.35562896728516, Val Loss: 0.8334789276123047, Val Accuracy: 73.69999694824219\n",
+      "Iteration 4200, Epoch 6, Loss: 0.409514844417572, Accuracy: 86.14386749267578, Val Loss: 0.859889030456543, Val Accuracy: 72.0\n",
+      "Iteration 4500, Epoch 6, Loss: 0.3866899609565735, Accuracy: 86.96441650390625, Val Loss: 0.9733158349990845, Val Accuracy: 71.80000305175781\n",
+      "Iteration 4800, Epoch 7, Loss: 0.31196486949920654, Accuracy: 89.12347412109375, Val Loss: 0.9835796356201172, Val Accuracy: 71.9000015258789\n",
+      "Iteration 5100, Epoch 7, Loss: 0.29267334938049316, Accuracy: 90.00928497314453, Val Loss: 1.1022939682006836, Val Accuracy: 72.79999542236328\n",
+      "Iteration 5400, Epoch 8, Loss: 0.24182185530662537, Accuracy: 91.34615325927734, Val Loss: 1.1322561502456665, Val Accuracy: 71.69999694824219\n"
+     ]
+    }
+   ],
+   "source": [
     "device = '/device:GPU:0'   # Change this to a CPU/GPU as you wish!\n",
     "# device = '/cpu:0'        # Change this to a CPU/GPU as you wish!\n",
     "print_every = 300\n",
     "num_epochs = 10\n",
     "\n",
-    "model = CustomConvNet()\n",
+    "# model = CustomConvNet()\n",
+    "# model = CustomResNet()\n",
     "\n",
     "def model_init_fn():\n",
     "    return CustomConvNet()\n",
